--- a/style.css
+++ b/style.css
@@ -1,29 +1,3 @@
 h1 {
-    color: black;
-    text-align: center;
+    color:blue;
 }
-
-.weather-app {
-    border: 1px solid #dadde1;
-    padding: 15px;
-    margin: 20px auto;
-    max-width: width 50px;
-    border-radius: 10px;
-}
-
-.card {
-    max-width: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.search-form {
-    margin-bottom: 20px auto;
-}
-
-.temperature {
-    color: rgb(33, 33, 33);
-    font-size: 64px;
-    font-weight: 400;
-    line-height: 1;
